--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -32,6 +32,7 @@ import '@fortawesome/fontawesome-free/css/all.min.css';
       <HeaderLink href="/organizations">Aktivnosti</HeaderLink>
       <HeaderLink href="/events">Događaji</HeaderLink>
       <HeaderLink href="/contact">Kontakt</HeaderLink>
+      <HeaderLink href="/Images">Slike</HeaderLink>
     </div>
     <div class="flex">
       <div class="weather flex flex-col justify-center items-center mr-2">
