--- a/src/pages/Images.astro
+++ b/src/pages/Images.astro
@@ -13,7 +13,13 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 	</head>
 	<body>
 		<Header />
-		<main>
+		<main class="imagesMain">
+			<img src="src/pages/Images/smetoviImage1.png" alt="img1" class="Images" />
+			<img src="src/pages/Images/smetoviImage2.png" alt="img2" class="Images" />
+			<img src="src/pages/Images/smetoviImage3.png" alt="img3" class="Images" />
+			<img src="src/pages/Images/smetoviImage4.png" alt="img4" class="Images" />
+			<img src="src/pages/Images/smetoviImage5.png" alt="img5" class="Images" />
+			<img src="src/pages/Images/smetoviImage6.png" alt="img6" class="Images" />
 		</main>
 		<Footer />
 	</body>
