--- a/src/pages/Images.astro
+++ b/src/pages/Images.astro
@@ -14,12 +14,24 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 	<body>
 		<Header />
 		<main class="imagesMain">
-			<img src="src/pages/Images/smetoviImage1.png" alt="img1" class="Images" />
-			<img src="src/pages/Images/smetoviImage2.png" alt="img2" class="Images" />
-			<img src="src/pages/Images/smetoviImage3.png" alt="img3" class="Images" />
-			<img src="src/pages/Images/smetoviImage4.png" alt="img4" class="Images" />
-			<img src="src/pages/Images/smetoviImage5.png" alt="img5" class="Images" />
-			<img src="src/pages/Images/smetoviImage6.png" alt="img6" class="Images" />
+			<a href="src/pages/Images/smetoviImage1.png" target="_blank">
+				<img src="src/pages/Images/smetoviImage1.png" alt="img1" class="Images" />
+			</a>  
+			<a href="src/pages/Images/smetoviImage2.png" target="_blank">
+				<img src="src/pages/Images/smetoviImage2.png" alt="img2" class="Images" />
+			</a>  
+			<a href="src/pages/Images/smetoviImage3.png" target="_blank">
+				<img src="src/pages/Images/smetoviImage3.png" alt="img3" class="Images" />
+			</a>  
+			<a href="src/pages/Images/smetoviImage4.png" target="_blank">
+				<img src="src/pages/Images/smetoviImage4.png" alt="img4" class="Images" />
+			</a>  
+			<a href="src/pages/Images/smetoviImage5.png" target="_blank">
+				<img src="src/pages/Images/smetoviImage5.png" alt="img5" class="Images" />
+			</a>  
+			<a href="src/pages/Images/smetoviImage6.png" target="_blank">
+				<img src="src/pages/Images/smetoviImage6.png" alt="img6" class="Images" />
+			</a>  
 		</main>
 		<Footer />
 	</body>
